Updated Dockerfile and docs

--- a/docker/arch-linux/Dockerfile
+++ b/docker/arch-linux/Dockerfile
@@ -2,24 +2,25 @@ FROM archlinux:latest
 
 WORKDIR /home/demo
 
-RUN pacman -Syyu --noconfirm &&\
-    pacman -S git vim sudo i3-gaps xorg-server xorg-xinit termite base-devel --noconfirm
-#    echo "exec i3" >> ~/.xinitrc
+RUN pacman -Syyu --noconfirm \
+    && pacman -S git vim sudo i3-gaps xorg-server xorg-xinit termite base-devel --noconfirm
+    # echo "exec i3" >> ~/.xinitrc
 
-RUN useradd demo -m &&\
-    passwd -d demo &&\
-    echo '%wheel ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers &&\
-    usermod -a -G wheel demo
+RUN useradd demo -m \
+    && passwd -d demo \
+    && echo '%wheel ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers \
+    && usermod -a -G wheel demo
 
 USER demo
+
 # Install yay
-RUN git clone https://aur.archlinux.org/yay.git &&\ 
-    cd yay &&\
-    makepkg -si --noconfirm
+RUN git clone https://aur.archlinux.org/yay.git \
+    && cd yay \
+    && makepkg -si --noconfirm
 
-WORKDIR /home/demo/dotfiles-repo
+WORKDIR /dotfiles
 
-# Copy dofiles repo
+# Copy dofiles repository
 COPY . .
 
 # CMD [ "i3" ]
