Added debian testing

--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -1,10 +1,10 @@
-ARG ARCHLINUX_VERSION=latest
+ARG DEBIAN_VERSION=latest
 
-FROM archlinux:${ARCHLINUX_VERSION} as base
-# ARCHLINUX_VERSION is specified again because the FROM directive resets ARGs
+FROM debian:${DEBIAN_VERSION} as base
+# DEBIAN_VERSION is specified again because the FROM directive resets ARGs
 # (but their default value is retained if set previously)
 
-ARG ARCHLINUX_VERSION
+ARG DEBIAN_VERSION
 ARG WINDOW_MANAGER
 ARG USER=test
 
@@ -15,20 +15,31 @@ RUN \
     # Check for mandatory build arguments: WINDOW_MANAGER
     : "${WINDOW_MANAGER:?Build argument `WINDOW_MANAGER` needs to be set and non-empty.}"
 
-# Add [multilib] to mirrolist since some deps come from that mirror
-RUN echo -e "[multilib]\nInclude = /etc/pacman.d/mirrorlist" > /tmp/multilib \
-    && cat /etc/pacman.conf /tmp/multilib > /tmp/pacman.conf \
-    && mv /tmp/pacman.conf /etc/pacman.conf
-
 # Install base deps for development
-RUN pacman -Syyu --noconfirm \
-    && pacman -S --noconfirm \
-        base-devel \
+RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get -y install \
+        build-essential \
         git \
+        net-tools \
         sudo \
         neovim \
-        xorg-server \
-        xorg-xinit \
+        apt-utils \
+        locales \
+        git \
+        g++ \
+        libgtk-3-dev \
+        gtk-doc-tools \
+        gnutls-bin \
+        valac \
+        intltool \
+        libpcre2-dev \
+        libglib3.0-cil-dev \
+        libgnutls28-dev \
+        libgirepository1.0-dev \
+        libxml2-utils \
+        gperf \
+        xserver-xorg \
+        xinit \
     && rm -rf /tmp/* /var/tmp/*
 
 ENV EDITOR nvim
@@ -37,19 +48,11 @@ RUN useradd -m ${USER} \
     && passwd -d ${USER} \
     && sed -i -e "s/Defaults    requiretty.*/ #Defaults    requiretty/g" /etc/sudoers \
     && echo "${USER} ALL=(ALL:ALL) NOPASSWD:ALL" > /etc/sudoers.d/${USER} \
-    && usermod -a -G wheel ${USER} \
+    && usermod -a -G sudo ${USER} \
     && rm -rf /home/${USER}/.bashrc
 
-# Install yay - https://github.com/Jguer/yay
-ARG YAY_VERSION=10.0.4
-ENV YAY_FOLDER=yay_${YAY_VERSION}_x86_64
-RUN cd /tmp \
-    && curl -L https://github.com/Jguer/yay/releases/download/v${YAY_VERSION}/${YAY_FOLDER}.tar.gz | tar zx \
-    && install -Dm755 ${YAY_FOLDER}/yay /usr/bin/yay \
-    && install -Dm644 ${YAY_FOLDER}/yay.8 /usr/share/man/man8/yay.8
-
 # Install and setup given window manager
-COPY docker/arch-linux/wm/${WINDOW_MANAGER}.sh /tmp/wm-setup.sh
+COPY docker/debian/wm/${WINDOW_MANAGER}.sh /tmp/wm-setup.sh
 RUN chmod a+rwx /tmp/wm-setup.sh && /tmp/wm-setup.sh
 
 # Set correct locale
@@ -60,6 +63,8 @@ RUN echo "LC_ALL=en_US.UTF-8" >> /etc/environment \
 RUN locale-gen en_US.UTF-8
 ENV LC_CTYPE 'en_US.UTF-8'
 ENV LANG C.UTF-8
+
+ENV PATH=$PATH:$GOPATH/bin
 
 COPY bashrc /etc/bash.bashrc
 RUN chmod a+rwx /etc/bash.bashrc
