Added openbox - WIP

--- a/common/config/polybar/modules/net.conf
+++ b/common/config/polybar/modules/net.conf
@@ -1,6 +1,6 @@
 [module/networkmanager-dmenu]
 type = custom/script
-exec = check-network
+exec = ~/bin/check-network
 click-left = networkmanager_dmenu &
 click-right = exo-open ~/.config/networkmanager-dmenu/config.ini
 label-padding = 1
