--- a/common/config/polybar/modules/menu.conf
+++ b/common/config/polybar/modules/menu.conf
@@ -27,7 +27,7 @@ menu-2-0 = "  "
 menu-2-0-exec = menu-open-0
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = "  "
-menu-2-1-exec = ~/bin/rofi_run -p
+menu-2-1-exec = ~/bin/rofi-run -p
 menu-2-2 = "    |"
 menu-2-2-exec = pavucontrol &
 # 3
