Updated fonts and docs

--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -10,7 +10,7 @@ label-foreground = ${colors.primary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "  "
+format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 format-underline = 
 label = %percentage_used%%
@@ -19,8 +19,8 @@ label-foreground = ${colors.primary}
 [module/battery]
 type = internal/battery
 ; Use $ ls -1 /sys/class/power_supply/
-battery = ${xrdb:polybar.modules.laptop.battery:BAT1}
-adapter = ${xrdb:polybar.modules.laptop.adapter:ACAD}
+battery = ${xrdb:polybar.modules.laptop.battery}
+adapter = ${xrdb:polybar.modules.laptop.adapter}
 full-at = 98
 poll-interval = 5
 time-format = %H:%M
