--- a/common/config/polybar/modules/spotify.conf
+++ b/common/config/polybar/modules/spotify.conf
@@ -1,7 +1,7 @@
 [module/spotify]
 type = custom/script
 interval = 1
-format-prefix = "  "
+format-prefix = " 阮 "
 format = <label>
 exec = python ~/bin/spotify
 format-underline = 
