--- a/common/config/polybar/polybars/bottom.conf
+++ b/common/config/polybar/polybars/bottom.conf
@@ -30,10 +30,9 @@ bottom = true
 ;-------;
 
 font-0 = "monospace:size=9;2"
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=9;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=9;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=9;3"
-font-4 = "UbuntuMono Nerd Font:size=9:;2"
+font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=14;3"
+font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=14;3"
+font-3 = "Hack Nerd Font Mono:pixelsize=14;3"
 
 ;--------;
 ; COLORS ;
