--- a/common/config/polybar/polybars/small-top-only.conf
+++ b/common/config/polybar/polybars/small-top-only.conf
@@ -30,10 +30,9 @@ bottom = false
 ;-------;
 
 font-0 = "monospace:size=8;2"
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=8;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=8;3"
-font-4 = "UbuntuMono Nerd Font:size=8:;2"
+font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=12;3"
+font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;3"
+font-3 = "Hack Nerd Font Mono:pixelsize=12;3"
 
 ;--------;
 ; COLORS ;
