--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -61,12 +61,12 @@ format-underline =
 format-warn = <ramp> <label-warn>
 format-warn-underline = 
 
-label =  %temperature-c%
-label-warn =  %temperature-c%
+label = 﨎 %temperature-c%
+label-warn = 﨎 %temperature-c%
 label-warn-foreground = ${colors.secondary}
 label-foreground = ${colors.primary}
 
 ramp-0 = 
 ramp-1 = 
-ramp-2 = 
+ramp-2 = 
 ramp-foreground = ${colors.primary}
