Added night mode

--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -29,3 +29,8 @@ inherit = module/xbacklight
 type = internal/backlight
 card = intel_backlight
 format = <label>
+
+[module/night-mode]
+type = custom/script
+exec = echo "望"
+click-left = ~/bin/night-mode auto
