--- a/common/config/polybar/modules/net.conf
+++ b/common/config/polybar/modules/net.conf
@@ -39,7 +39,7 @@ interface = ${xrdb:polybar.modules.eth.iface:}
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = "  "
+format-connected-prefix = "  "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
