Migrated from compton to picom

--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -12,7 +12,7 @@ fade-in-step = 0.03;
 fade-out-step = 0.028;
 
 # Backend
-vsync = "none";
+vsync = false;
 backend = "xrender";
 mark-wmwin-focused = true;
 unredir-if-possible = true;
@@ -52,11 +52,11 @@ focus-exclude = [
 wintypes:
 {
     tooltip = { fade = true; shadow = true; focus = true; };
+    dock = { shadow = false; };
+    popup_menu = { opacity = 1.0; };
+    dropdown_menu = { opacity = 1.0; };
 };
-no-dock-shadow = true;
-clear-shadow = false;
 no-fading-openclose = true;
-menu-opacity = 1.0;
 inactive-opacity = 1.0;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
