--- a/default-config/wm/i3/config
+++ b/default-config/wm/i3/config
@@ -32,7 +32,7 @@ set $WS8 "8: "
 
 # run with reload
 exec_always --no-startup-id xrdb -I$HOME -load ~/.Xresources
-exec_always --no-startup-id compton --config ~/.config/compton.conf
+exec_always --no-startup-id picom --config ~/.config/picom.conf
 exec_always --no-startup-id ~/.config/feh/.fehbg
 exec_always --no-startup-id ~/.config/polybar/launch
 
