--- a/common/config/polybar/polybars/small-top.conf
+++ b/common/config/polybar/polybars/small-top.conf
@@ -38,7 +38,8 @@ font-3 = "Hack Nerd Font Mono:pixelsize=12;3"
 ; COLORS ;
 ;--------;
 
-background = 0
+;background = #aa2F343F
+background = #00000000
 background-alt = #555
 foreground = #dfdfdf
 foreground-alt = #555
@@ -50,7 +51,7 @@ alert = #B2535B
 ; MISCELLANEOUS ;
 ;---------------;
 
-radius = 0.0
+radius = 5.0
 fixed-center = true
 padding-left = 0
 padding-right = 2
