--- a/common/config/polybar/polybars/small-top-only.conf
+++ b/common/config/polybar/polybars/small-top-only.conf
@@ -39,7 +39,7 @@ font-3 = "Hack Nerd Font Mono:pixelsize=12;3"
 ;--------;
 
 ;background = #aa2F343F
-background = #00000000
+background = ${xrdb:polybar.top.background:#00000000}
 background-alt = #555
 foreground = #dfdfdf
 foreground-alt = #555
@@ -51,7 +51,7 @@ alert = #B2535B
 ; MISCELLANEOUS ;
 ;---------------;
 
-radius = 5.0
+radius = ${xrdb:polybar.radius:5.0}
 fixed-center = true
 padding-left = 0
 padding-right = 2
