--- a/common/config/polybar/modules.conf
+++ b/common/config/polybar/modules.conf
@@ -3,6 +3,7 @@
 ;---------;
 
 include-file = ~/.config/polybar/modules/audio.conf
+include-file = ~/.config/polybar/modules/bluetooth.conf
 include-file = ~/.config/polybar/modules/datetime.conf
 include-file = ~/.config/polybar/modules/fs.conf
 include-file = ~/.config/polybar/modules/i3.conf
