--- a/common/config/polybar/modules/keyboard.conf
+++ b/common/config/polybar/modules/keyboard.conf
@@ -22,7 +22,7 @@ label-indicator-background = #8139e8
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = "  "
+format-prefix = "  "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
