--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -53,6 +53,8 @@ animation-charging-framerate = 750
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
+
+base-temperature = 20
 warn-temperature = 60
 
 format = <ramp> <label>
@@ -66,7 +68,7 @@ label-warn = 﨎 %temperature-c%
 label-warn-foreground = ${colors.secondary}
 label-foreground = ${colors.primary}
 
-ramp-0 = 
-ramp-1 = 
+ramp-0 = 
+ramp-1 =
 ramp-2 = 
 ramp-foreground = ${colors.primary}
