--- a/common/config/polybar/modules/datetime.conf
+++ b/common/config/polybar/modules/datetime.conf
@@ -8,7 +8,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 format-underline = 
 format-foreground = ${colors.primary}
