--- a/common/config/polybar/modules/menu.conf
+++ b/common/config/polybar/modules/menu.conf
@@ -26,8 +26,12 @@ menu-1-3-exec = exo-open --launch FileManager
 menu-2-0 = " ﬔ "
 menu-2-0-exec = menu-open-0
 menu-2-0-foreground = ${colors.urgent}
-menu-2-1 = "    |"
-menu-2-1-exec = pavucontrol &
+menu-2-1 = "  "
+menu-2-1-exec = rofi-randr &
+menu-2-2 = "  "
+menu-2-2-exec = rofi-xrandr &
+menu-2-3 = "    |"
+menu-2-3-exec = pavucontrol &
 # 3
 menu-3-0 = " ﬔ "
 menu-3-0-exec = menu-open-0
