--- a/common/config/polybar/master.conf
+++ b/common/config/polybar/master.conf
@@ -1,11 +1,10 @@
 [colors]
-background = ${xrdb:color0:#222}
+background = ${xrdb:background:#222}
 background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
+foreground = ${xrdb:foreground:#dfdfdf}
 foreground-alt = #555
-primary = #FFF
-secondary = #B2535B
+primary = ${xrdb:color0:#FFF}
+secondary = ${xrdb:color7:#dfdfdf}
 alert = #B2535B
 moderate = #ebcb8b
 urgent = #bf616a
