--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -13,14 +13,18 @@ fade-out-step = 0.028;
 
 # Backend
 vsync = false;
-backend = "xrender";
+backend = "glx";
+xrender-sync-fence = true;
 mark-wmwin-focused = true;
 unredir-if-possible = true;
 detect-rounded-corners = true;
 
-opacity-rule = [
-    "0:_NET_WM_STATE@:32a * = '_NET_WM_STATE_HIDDEN'"
-];
+# GLX Backend
+glx-no-stencil            = true;
+glx-copy-from-front       = false;
+glx-use-copysubbuffermesa = true;
+glx-no-rebind-pixmap      = true;
+glx-swap-method           = "undefined";
 
 shadow-exclude = [
     "name *?= 'Notification'",
@@ -51,14 +55,25 @@ focus-exclude = [
 
 wintypes:
 {
-    tooltip = { fade = true; shadow = true; focus = true; };
-    dock = { shadow = false; };
-    popup_menu = { opacity = 1.0; };
-    dropdown_menu = { opacity = 1.0; };
+    tooltip       = { fade = true; shadow = false; };
+    menu          = { fade = true; shadow = true;  };
+    popup_menu    = { fade = true; shadow = true;  };
+    dropdown_menu = { fade = true; shadow = true;  };
+    utility       = { fade = true; shadow = true;  };
+    dialog        = { fade = true; shadow = true;  };
+    notify        = { fade = true; shadow = true;  };
+    unknown       = { fade = true; shadow = true;  };
+    dock          = { shadow = false; };
 };
+
 no-fading-openclose = true;
 inactive-opacity = 1.0;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
 shadow-ignore-shaped = false;
 blur-background-fixed = false;
+
+opacity-rule = [
+  "97:class_g = 'code-oss'",
+  "94:class_g = 'Thunar'"
+];
