Updated new module

--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -1,9 +1,13 @@
-[module/xbacklight]
-type = internal/xbacklight
+[module/backlight]
+type = internal/backlight
 
 format = <label> <bar>
 label =  %percentage%%
 label-foreground = ${colors.primary}
+
+; Use the following command to list available cards:
+; $ ls -1 /sys/class/backlight/
+card = ${xrdb:polybar.modules.backlight.card:intel_backlight}
 
 bar-width = 10
 bar-indicator = |
@@ -19,13 +23,13 @@ bar-empty-foreground = ${colors.foreground-alt}
 enable-scroll = true
 
 [module/backlight-acpi-bar]
-inherit = module/xbacklight
+inherit = module/backlight
 type = internal/backlight
 card = intel_backlight
 format = <label> <bar>
 
 [module/backlight-acpi]
-inherit = module/xbacklight
+inherit = module/backlight
 type = internal/backlight
 card = intel_backlight
 format = <label>
