Updated light module

--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -1,5 +1,5 @@
-[module/backlight]
-type = internal/backlight
+[module/xbacklight]
+type = internal/xbacklight
 
 format = <label> <bar>
 label =  %percentage%%
@@ -23,15 +23,19 @@ bar-empty-foreground = ${colors.foreground-alt}
 enable-scroll = true
 
 [module/backlight-acpi-bar]
-inherit = module/backlight
+inherit = module/xbacklight
 type = internal/backlight
-card = intel_backlight
+; Use the following command to list available cards:
+; $ ls -1 /sys/class/backlight/
+card = ${xrdb:polybar.modules.backlight.card:intel_backlight}
 format = <label> <bar>
 
 [module/backlight-acpi]
-inherit = module/backlight
+inherit = module/xbacklight
 type = internal/backlight
-card = intel_backlight
+; Use the following command to list available cards:
+; $ ls -1 /sys/class/backlight/
+card = ${xrdb:polybar.modules.backlight.card:intel_backlight}
 format = <label>
 
 [module/night-mode]
