--- a/common/config/polybar/polybars/top.conf
+++ b/common/config/polybar/polybars/top.conf
@@ -61,7 +61,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = ${xrdb:polybar.top.left:jgmenu menu window_switch pulseaudio-bar backlight}
+modules-left = ${xrdb:polybar.top.left:jgmenu menu window_switch pulseaudio-bar backlight-acpi-bar}
 modules-center = ${xrdb:polybar.top.center:date-popup}
 modules-right = ${xrdb:polybar.top.right:pkg filesystem memory cpu temperature networkmanager-dmenu}
 
