--- a/common/config/polybar/modules/i3.conf
+++ b/common/config/polybar/modules/i3.conf
@@ -1,7 +1,7 @@
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
-index-sort = false
+index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
