--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,13 +29,13 @@ jobs:
       run: |
         cd github-wikito-converter
         npm install
-        npm run build-and-install-g
+        npm run build
         cd ..
 
     - name: Build Docs
       run: |
         mkdir public
-        gwtc --file-name index --output ./public ./dotfiles.wiki
+        node ./github-wikito-converter/dist/cli/gwtc.js --file-name index --output ./public ./dotfiles.wiki
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
