--- a/default-config/wm/i3/config
+++ b/default-config/wm/i3/config
@@ -19,14 +19,14 @@ set $down k
 set $left j
 set $right semicolon
 
-set $WS1 "1: "
-set $WS2 "2: "
-set $WS3 "3: "
-set $WS4 "4: "
-set $WS5 "5: "
-set $WS6 "6: "
-set $WS7 "7: "
-set $WS8 "8: ﭮ"
+set $WS1 "1"
+set $WS2 "2"
+set $WS3 "3"
+set $WS4 "4"
+set $WS5 "5"
+set $WS6 "6"
+set $WS7 "7"
+set $WS8 "8"
 
 ###############     Autostart      ##################
 
