--- a/common/config/polybar/modules/audio.conf
+++ b/common/config/polybar/modules/audio.conf
@@ -2,6 +2,7 @@
 type = custom/script
 exec = ~/bin/microphone
 tail = true
+format-foreground = #b2535b
 click-left = ~/bin/microphone --toggle &
 
 [module/pulseaudio-bar]
