--- a/common/config/networkmanager-dmenu/config.ini
+++ b/common/config/networkmanager-dmenu/config.ini
@@ -2,5 +2,5 @@
 dmenu_command = rofi -location 3 -yoffset 60 -xoffset -10 -width 37 -font "monospace 11" -padding 20 -line-padding 4 -password
 
 [editor]
-terminal = termite
-gui_if_available = false
+terminal = alacritty
+gui_if_available = true
