--- a/common/config/polybar/modules/pkg.conf
+++ b/common/config/polybar/modules/pkg.conf
@@ -1,5 +1,5 @@
 [module/pkg]
 type = custom/script
 exec = ~/bin/updates
-label = %{A1:termite --exec=sysupdate & disown:} %{A3:termite --exec=sysupdate & disown:}%output%%{A} %{A}
+label = %{A1:alacritty -e=sysupdate & disown:} %{A3:alacritty -e=sysupdate & disown:}%output%%{A} %{A}
 tail = true
