--- a/common/config/networkmanager-dmenu/config.ini
+++ b/common/config/networkmanager-dmenu/config.ini
@@ -1,5 +1,5 @@
 [dmenu]
-dmenu_command = rofi -location 3 -yoffset 60 -xoffset -10 -width 37 -font "monospace 11" -padding 20 -line-padding 4 -password
+dmenu_command = rofi -password -theme ~/.config/rofi/networks.rasi
 
 [editor]
 terminal = alacritty
