Updated wallpapers and bins

--- a/common/config/polybar/modules/audio.conf
+++ b/common/config/polybar/modules/audio.conf
@@ -1,8 +1,8 @@
 [module/pulseaudio-microphone]
 type = custom/script
-exec = ~/bin/microphone
+exec = ~/.local/bin/microphone
 tail = true
-click-left = ~/bin/microphone --toggle &
+click-left = ~/.local/bin/microphone --toggle &
 
 [module/pulseaudio-bar]
 inherit = module/pulseaudio
