--- a/common/config/polybar/modules/bluetooth.conf
+++ b/common/config/polybar/modules/bluetooth.conf
@@ -1,5 +1,5 @@
 [module/bluetooth]
 type = custom/script
-exec = ~/bin/rofi-bluetooth --status | cut -d " " -f 1
+exec = ~/.local/bin/rofi-bluetooth --status | cut -d " " -f 1
 interval = 1
-click-left = ~/bin/rofi-bluetooth &
+click-left = ~/.local/bin/rofi-bluetooth &
