--- a/common/config/polybar/modules/spotify.conf
+++ b/common/config/polybar/modules/spotify.conf
@@ -3,6 +3,6 @@ type = custom/script
 interval = 1
 format-prefix = " 阮 "
 format = <label>
-exec = python ~/bin/spotify
+exec = python ~/.local/bin/spotify
 format-underline = 
 format-foreground = ${colors.primary}
