--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -41,4 +41,4 @@ format = <label>
 [module/night-mode]
 type = custom/script
 exec = echo "望"
-click-left = ~/bin/night-mode auto
+click-left = ~/.local/bin/night-mode auto
