--- a/default-config/wm/i3/config
+++ b/default-config/wm/i3/config
@@ -43,7 +43,7 @@ exec_always --no-startup-id ~/.config/polybar/launch
 exec --no-startup-id xfsettingsd
 
 # needed for super to launch rofi through ksuperkey, see ~/.xprofile
-bindsym Mod1+F1 exec --no-startup-id ~/bin/rofi-run -r
+bindsym Mod1+F1 exec --no-startup-id ~/.local/bin/rofi-run -r
 
 #############         Bindings           ##################
 
@@ -53,7 +53,7 @@ bindsym Mod1+q kill
 bindsym Mod1+F4 kill
 
 # launchers
-bindsym Control+space exec --no-startup-id ~/bin/rofi-run -r
+bindsym Control+space exec --no-startup-id ~/.local/bin/rofi-run -r
 
 # core
 bindsym $Mod+w          exec --no-startup-id exo-open --launch WebBrowser
@@ -62,11 +62,11 @@ bindsym $Mod+t          exec --no-startup-id exo-open --launch TerminalEmulator
 bindsym $Mod+Return     exec --no-startup-id exo-open --launch TerminalEmulator
 
 # logout script
-bindsym $Mod+x exec --no-startup-id ~/bin/rofi-run -l
+bindsym $Mod+x exec --no-startup-id ~/.local/bin/rofi-run -l
 
 # Screenshot
-bindsym Print exec --no-startup-id "~/bin/screenshooter"
-bindsym Shift+Print exec --no-startup-id "~/bin/screenshooter -r"
+bindsym Print exec --no-startup-id "~/.local/bin/screenshooter"
+bindsym Shift+Print exec --no-startup-id "~/.local/bin/screenshooter -r"
 
 # audio
 bindsym XF86AudioPlay        exec --no-startup-id playerctl play-pause
@@ -78,13 +78,13 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -i 1
 bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 1
 
 # backlight
-bindsym XF86MonBrightnessUp         exec --no-startup-id ~/bin/brightness "*" + 0.1
-bindsym XF86MonBrightnessDown       exec --no-startup-id ~/bin/brightness "*" - 0.1
-bindsym Shift+XF86MonBrightnessUp   exec --no-startup-id ~/bin/brightness "*" + 0.01
-bindsym Shift+XF86MonBrightnessDown exec --no-startup-id ~/bin/brightness "*" - 0.01
+bindsym XF86MonBrightnessUp         exec --no-startup-id ~/.local/bin/brightness "*" + 0.1
+bindsym XF86MonBrightnessDown       exec --no-startup-id ~/.local/bin/brightness "*" - 0.1
+bindsym Shift+XF86MonBrightnessUp   exec --no-startup-id ~/.local/bin/brightness "*" + 0.01
+bindsym Shift+XF86MonBrightnessDown exec --no-startup-id ~/.local/bin/brightness "*" - 0.01
 
 # toggle
-bindsym $Mod+Control+p exec --no-startup-id ~/bin/toggle -p -t &
+bindsym $Mod+Control+p exec --no-startup-id ~/.local/bin/toggle -p -t &
 
 ###########          Workspace Bindings          ###############
 
