--- a/common/config/polybar/modules/menu.conf
+++ b/common/config/polybar/modules/menu.conf
@@ -27,9 +27,9 @@ menu-2-0 = " ﬔ "
 menu-2-0-exec = menu-open-0
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = "  "
-menu-2-1-exec = rofi-randr &
+menu-2-1-exec = ~/.local/bin/rofi-randr &
 menu-2-2 = "  "
-menu-2-2-exec = rofi-xrandr &
+menu-2-2-exec = ~/.local/bin/rofi-xrandr &
 menu-2-3 = "    |"
 menu-2-3-exec = pavucontrol &
 # 3
