--- a/.github/workflows/aur-publish.yml
+++ b/.github/workflows/aur-publish.yml
@@ -1,9 +1,9 @@
-name: AUR Publish
+name: AUR Publish - Development version
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - master
 
 jobs:
   aur-publish:
