Updated ~/.config to XDG_CONFIG_HOME

--- a/common/config/networkmanager-dmenu/config.ini
+++ b/common/config/networkmanager-dmenu/config.ini
@@ -1,5 +1,5 @@
 [dmenu]
-dmenu_command = rofi -password -theme ~/.config/rofi/networks.rasi
+dmenu_command = rofi -password -theme "${XDG_CONFIG_HOME}"/rofi/networks.rasi
 
 [editor]
 terminal = alacritty
