--- a/common/config/polybar/modules/net.conf
+++ b/common/config/polybar/modules/net.conf
@@ -2,7 +2,7 @@
 type = custom/script
 exec = ~/.local/bin/check-network
 click-left = networkmanager_dmenu &
-click-right = exo-open ~/.config/networkmanager-dmenu/config.ini
+click-right = exo-open "${XDG_CONFIG_HOME}"/networkmanager-dmenu/config.ini
 label-padding = 1
 tail = true
 
