--- a/common/config/polybar/config
+++ b/common/config/polybar/config
@@ -1,16 +1,16 @@
 [section/base]
-include-file = ~/.config/polybar/modules.conf
-include-file = ~/.config/polybar/master.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/master.conf
 
-include-file = ~/.config/polybar/polybars/top.conf
-include-file = ~/.config/polybar/polybars/top-only.conf
-include-file = ~/.config/polybar/polybars/bottom.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/polybars/top.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/polybars/top-only.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/polybars/bottom.conf
 
-include-file = ~/.config/polybar/polybars/small-top.conf
-include-file = ~/.config/polybar/polybars/small-top-only.conf
-include-file = ~/.config/polybar/polybars/small-bottom.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/polybars/small-top.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/polybars/small-top-only.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/polybars/small-bottom.conf
 
 ;---------;
 ; CUSTOM  ;
 ;---------;
-include-file = ~/.config/polybar/polybars/custom.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/polybars/custom.conf
