--- a/common/config/polybar/modules.conf
+++ b/common/config/polybar/modules.conf
@@ -2,27 +2,27 @@
 ; MODULES ;
 ;---------;
 
-include-file = ~/.config/polybar/modules/audio.conf
-include-file = ~/.config/polybar/modules/bluetooth.conf
-include-file = ~/.config/polybar/modules/datetime.conf
-include-file = ~/.config/polybar/modules/fs.conf
-include-file = ~/.config/polybar/modules/i3.conf
-include-file = ~/.config/polybar/modules/jgmenu.conf
-include-file = ~/.config/polybar/modules/keyboard.conf
-include-file = ~/.config/polybar/modules/light.conf
-include-file = ~/.config/polybar/modules/menu.conf
-include-file = ~/.config/polybar/modules/mpd.conf
-include-file = ~/.config/polybar/modules/net.conf
-include-file = ~/.config/polybar/modules/pkg.conf
-include-file = ~/.config/polybar/modules/resources.conf
-include-file = ~/.config/polybar/modules/spotify.conf
-include-file = ~/.config/polybar/modules/weather.conf
-include-file = ~/.config/polybar/modules/window.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/audio.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/bluetooth.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/datetime.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/fs.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/i3.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/jgmenu.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/keyboard.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/light.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/menu.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/mpd.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/net.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/pkg.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/resources.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/spotify.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/weather.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/window.conf
 
 ;---------;
 ; CUSTOM  ;
 ;---------;
-include-file = ~/.config/polybar/modules/custom.conf
+include-file = "${XDG_CONFIG_HOME}"/polybar/modules/custom.conf
 
 [settings]
 screenchange-reload = true
