Updated picom setup

--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -12,19 +12,11 @@ fade-in-step = 0.03;
 fade-out-step = 0.028;
 
 # Backend
-vsync = false;
-backend = "glx";
+backend = "xrender";
 xrender-sync-fence = true;
 mark-wmwin-focused = true;
 unredir-if-possible = true;
 detect-rounded-corners = true;
-
-# GLX Backend
-glx-no-stencil            = true;
-glx-copy-from-front       = false;
-glx-use-copysubbuffermesa = true;
-glx-no-rebind-pixmap      = true;
-glx-swap-method           = "undefined";
 
 shadow-exclude = [
     "name *?= 'Notification'",
