--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -62,5 +62,5 @@ module-margin-left = 2
 module-margin-right = 2
 
 modules-left = ${xrdb:polybar.bottom.left:i3}
-modules-center = ${xrdb:polybar.bottom.center:spotify}
+modules-center = ${xrdb:polybar.bottom.center:}
 modules-right = ${xrdb:polybar.bottom.right:keyboard filesystem memory cpu temperature}
