--- a/common/config/polybar/modules/datetime.conf
+++ b/common/config/polybar/modules/datetime.conf
@@ -17,8 +17,8 @@ label = %date% %time%
 
 [module/date-popup]
 type = custom/script
-exec = ~/.local/bin/popup-calendar
+exec = dots-scripts popup-calendar
 interval = 5
-click-left = ~/.local/bin/popup-calendar --popup
+click-left = dots-scripts popup-calendar --popup
 format-foreground = ${colors.primary}
 label = %output:0%
