--- a/common/config/polybar/modules/net.conf
+++ b/common/config/polybar/modules/net.conf
@@ -1,6 +1,6 @@
 [module/networkmanager-dmenu]
 type = custom/script
-exec = ~/.local/bin/check-network
+exec = dots-scripts check-network
 click-left = networkmanager_dmenu &
 click-right = exo-open $XDG_CONFIG_HOME/networkmanager-dmenu/config.ini
 label-padding = 1
