--- a/common/config/polybar/modules/weather.conf
+++ b/common/config/polybar/modules/weather.conf
@@ -1,6 +1,6 @@
 [module/weather]
 type = custom/script
-exec = ~/.local/bin/openweathermap-detailed
+exec = dots-scripts openweathermap-detailed
 exec-if = ping openweathermap.org -c 1
 interval = 600
 label-font = 3
