--- a/.github/workflows/aur-dev-publish.yml
+++ b/.github/workflows/aur-dev-publish.yml
@@ -16,7 +16,7 @@ jobs:
         uses: KSXGitHub/github-actions-deploy-aur@v2.2.5
         with:
           pkgname: dots-git
-          pkgbuild: ./PKGBUILD
+          pkgbuild: ./PKGBUILD.dev
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
