--- a/.github/workflows/aur-dev-publish.yml
+++ b/.github/workflows/aur-dev-publish.yml
@@ -22,3 +22,9 @@ jobs:
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
           commit_message: Update AUR package
           ssh_keyscan_types: rsa,dsa,ecdsa,ed25519
+
+      - name: Commit and Push Updated PKGBUILD
+        run: |
+          git add PKGBUILD.dev
+          git commit -m "Update AUR package"
+          git push origin ${{ github.ref }}
