--- a/.github/workflows/aur-dev-publish.yml
+++ b/.github/workflows/aur-dev-publish.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Commit and Push Updated PKGBUILD
         run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ secrets.AUR_EMAIL }}"
           git add PKGBUILD.dev
           git commit -m "Update AUR package"
           git push origin ${{ github.ref }}
