--- a/.github/workflows/aur-dev-publish.yml
+++ b/.github/workflows/aur-dev-publish.yml
@@ -12,13 +12,14 @@ jobs:
       - name: Checkout Latest Dotfiles
         uses: actions/checkout@v2
 
+      - name: Replace PKGBUILD with correct file
+        run: mv PKGBUILD.dev PKGBUILD
+
       - name: Publish AUR package
-        uses: KSXGitHub/github-actions-deploy-aur@v2.2.5
+        uses: guumaster/aur-publish-docker-action@v1
         with:
           pkgname: dots-git
-          pkgbuild: ./PKGBUILD.dev
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
           commit_message: Update AUR package
-          ssh_keyscan_types: rsa,dsa,ecdsa,ed25519
