--- a/.github/workflows/aur-publish.yml
+++ b/.github/workflows/aur-publish.yml
@@ -13,10 +13,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Publish AUR package
-        uses: guumaster/aur-publish-docker-action@v1
+        uses: KSXGitHub/github-actions-deploy-aur@v2.2.5
         with:
           pkgname: dots-stable
+          pkgbuild: ./PKGBUILD
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
           commit_message: Update AUR package
+          ssh_keyscan_types: rsa,dsa,ecdsa,ed25519
