Added click handler

--- a/common/config/polybar/modules/audio.conf
+++ b/common/config/polybar/modules/audio.conf
@@ -11,6 +11,8 @@ format-volume =   <label-volume> <bar-volume>
 [module/pulseaudio]
 type = internal/pulseaudio
 
+click-right = pavucontrol
+
 format-volume =   <label-volume>
 format-volume-foreground = ${colors.primary}
 label-volume = %percentage%%
