--- a/common/config/polybar/polybars/small-top-only.conf
+++ b/common/config/polybar/polybars/small-top-only.conf
@@ -70,7 +70,7 @@ tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
-;wm-restack = bspwm
+wm-restack = bspwm
 ;wm-restack = i3
 
 ;override-redirect = true
