--- a/default-config/wm/i3/config
+++ b/default-config/wm/i3/config
@@ -224,11 +224,11 @@ bindsym $Mod+Control+Shift+plus  gaps outer all     plus  5
 bindsym $Mod+Control+Shift+minus gaps outer all     minus 5
 
 # focus, floating, & sticky
-for_window [class="Sxiv"]                            floating enable
-for_window [class="Thunar|thunar"]                   floating enable, focus
-for_window [title="Volume Control"]                  floating enable, focus
-for_window [class="(?i)(?:qt5ct|pinentry)"]          floating enable, focus
-for_window [title="(?i)(?:copying|deleting|moving)"] floating enable
-for_window [window_role="(?i)(?:pop-up|setup)"]      floating enable
+for_window [class="Sxiv"]                                                                floating enable
+for_window [class="Thunar|thunar"]                                                       floating enable, focus
+for_window [title="Volume Control"]                                                      floating enable, focus
+for_window [class="(?i)(?:qt5ct|pinentry)"]                                              floating enable, focus
+for_window [title="(?i)(?:copying|deleting|moving)"]                                     floating enable
+for_window [window_role="(?i)(?:pop-up|setup|task_dialog|dialog|menu|Preferences)"]      floating enable
 
 popup_during_fullscreen smart
